#26 fix/ 1.2 letter spacing

--- a/src/blocks/about/__text/about__text.scss
+++ b/src/blocks/about/__text/about__text.scss
@@ -3,6 +3,10 @@
   letter-spacing: 0.02em;
   margin: 0;
   z-index: 10;
+
+  @media screen and (max-width: 767px) {
+    letter-spacing: normal;
+  }
 }
 
 .about__second-part .about__text {
